--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 body {
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+#startButton {
+    height: 100px;
+    width: 200px;
 }
