--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,34 @@
 body {
-    background-color: black;
+    background-color: rgb(46, 46, 46);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    gap: 10px;
 }
 
 #startButton {
     height: 100px;
     width: 200px;
 }
+
+.playerButtons {
+    height: 80px;
+    width: 200px;
+    
+    display: none;
+}
+
+#hitButton {
+    
+}
+
+#standButton {
+    
+}
+
+#doubleDownButton {
+    
+}
+
