--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
     background-color: rgb(46, 46, 46);
+    display: flex;
+    flex-direction: column;
+
 }
 
 #mainContainer {
@@ -7,7 +10,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     gap: 10px;
     color: wheat;
 }
@@ -48,5 +51,12 @@ img {
     width: auto;
     height: 200px;
     display: inline;
+}
+
+#money {
+    color: wheat;
+    margin-left: auto;
+    margin-top: auto;
+    font-size: 30px;
 }
 
