--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,51 @@
 body {
-    background-color: rgb(46, 46, 46);
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+    background-image: url(/decoration_images/layered-waves-haikei\ \(9\).svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    
+}
 
+#visual {
+    
 }
 
 #mainContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    height: 90vh;
     gap: 10px;
-    color: wheat;
+    color: white;
+    margin-top: 0;
+    width: 100%;
 }
 
 #startButton {
     height: 100px;
-    width: 200px;
+    width: 220px;
+    margin-top: 0%
+    
+}
+
+#mainHeader {
+    font-size: 90px;
+    color: white;
+    margin-top: 10%
+}
+
+#moneySection {
+    display: flex;
+    color: wheat;
+    margin-left: auto;
+    font-size: 30px;
+    margin-right: 15px;
+    margin-top: 10px;
+    gap: 10px;
 }
 
 #gameControlsDiv {
@@ -27,8 +55,11 @@ body {
 .playerButtons {
     height: 80px;
     width: 200px;
+    display: inline-block;
+}
 
-
+#continueGameButton {
+    display: none;
 }
 
 #restartGameButton {
@@ -39,8 +70,10 @@ body {
     display: none;
 }
 
-h3, h2 {
+h3,
+h2 {
     margin-bottom: 0;
+    font-size: 35px;
 }
 
 h3 {
@@ -48,15 +81,191 @@ h3 {
 }
 
 img {
-    width: auto;
-    height: 200px;
+    width: 160px;
+    height: auto;
     display: inline;
 }
 
-#money {
-    color: wheat;
-    margin-left: auto;
-    margin-top: auto;
-    font-size: 30px;
+.decorationImg {
+    width: 50px;
+    height: auto;
 }
 
+
+
+
+
+/* Homepage Button */
+
+.bn5 {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    font-size: 23px;
+  }
+  
+  .bn5:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowingbn5 20s linear infinite;
+    
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowingbn5 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .bn5:active {
+    color: #000000;
+  }
+  
+  .bn5:active:after {
+    background: transparent;
+  }
+  
+  .bn5:hover:before {
+    opacity: 1;
+  }
+  
+  .bn5:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(14, 14, 14);
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
+
+  .bn5:hover:after {
+    
+    background: none;
+  }
+
+  .bn5:hover {
+    font-size: 25px;
+  } 
+
+/* Player Buttons */
+
+.bn6 {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #000000;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    font-size: 15px;
+  }
+  
+  .bn6:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #4b4b4b,
+      #ffffff,
+      #ffffff,
+      #000000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowingbn5 20s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowingbn5 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .bn6:active {
+    color: #000000;
+  }
+  
+  .bn6:active:after {
+    background: transparent;
+  }
+  
+  .bn6:hover:before {
+    opacity: 1;
+  }
+  
+  .bn6:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(14, 14, 14);
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
+
+  .poetsen-one-regular {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .freeman-regular {
+    font-family: "Freeman", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  
+  
+  
+  
+  
