--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     color: white;
     margin-top: 0;
     width: 100%;
+    height: 90vh;
 }
 
 #startButton {
@@ -56,6 +57,7 @@ body {
     height: 80px;
     width: 200px;
     display: inline-block;
+    font-size: 19px;
 }
 
 #continueGameButton {
@@ -91,6 +93,42 @@ img {
     height: auto;
 }
 
+#bettingScreen {
+  display: none;
+  position: absolute;
+  background-color: rgb(33, 33, 33);
+  height: 85%;
+  width: 40%;
+  z-index: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+#bettingScreen input {
+  height: 100%;
+  font-size: 200%;
+}
+
+#bettingTitleBox {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+#bettingTitleBox h1 {
+  font-size: 200%;
+}
+
+#bettingTitleBox img {
+  height: auto;
+  width: 10%;
+}
+
+#doubleDownButton {
+  font-size: 19px;
+}
 
 
 
@@ -146,7 +184,7 @@ img {
   }
   
   .bn5:active {
-    color: #000000;
+    color: #ffffff;
   }
   
   .bn5:active:after {
