--- a/styles.css
+++ b/styles.css
@@ -219,76 +219,85 @@ img {
 /* Player Buttons */
 
 .bn6 {
-    padding: 0.6em 2em;
-    border: none;
-    outline: none;
-    color: rgb(255, 255, 255);
-    background: #000000;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
-    font-size: 15px;
-  }
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #000000;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  font-size: 23px;
+}
+
+.bn6:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #000000,
+    #282828,
+    #1e1e1e,
+    #000000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
   
-  .bn6:before {
-    content: "";
-    background: linear-gradient(
-      45deg,
-      #4b4b4b,
-      #ffffff,
-      #ffffff,
-      #000000
-    );
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowingbn5 20s linear infinite;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    border-radius: 10px;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
   }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.bn6:active {
+  color: #ffffff;
+}
+
+.bn6:active:after {
+  background: transparent;
+}
+
+.bn6:hover:before {
+  opacity: 1;
+}
+
+.bn6:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
   
-  @keyframes glowingbn5 {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-      background-position: 400% 0;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.bn6:hover:after {
   
-  .bn6:active {
-    color: #000000;
-  }
-  
-  .bn6:active:after {
-    background: transparent;
-  }
-  
-  .bn6:hover:before {
-    opacity: 1;
-  }
-  
-  .bn6:after {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgb(14, 14, 14);
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-  }
+  background: none;
+}
+
+.bn6:hover {
+  font-size: 25px;
+} 
 
   .poetsen-one-regular {
     font-family: "Poetsen One", sans-serif;
