--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     color: wheat;
     margin-left: auto;
     font-size: 30px;
-    margin-right: 15px;
+    margin-right: 30px;
     margin-top: 10px;
     gap: 10px;
 }
@@ -96,14 +96,14 @@ img {
 #bettingScreen {
   display: none;
   position: absolute;
-  background-color: rgb(33, 33, 33);
+  background-color: rgb(59, 59, 59);
   height: 85%;
   width: 40%;
   z-index: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  background: transparent;
 }
 
 #bettingScreen input {
@@ -236,7 +236,7 @@ img {
   background: linear-gradient(
     45deg,
     #000000,
-    #282828,
+    #313131,
     #1e1e1e,
     #000000
   );
